--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "gemini-clone",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://shiengng0428.github.io/google_gemini_clone",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@google/generative-ai": "^0.5.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
